syntax = "proto3";

package helloworld;


service Packet {
  // Sends a greeting
  rpc SendPacket (PacketRequest) returns (PacketReply) {}
}

// The request message containing the user's name.
message PacketRequest {
  string packet = 1;
}

// The response message containing the greetings
message PacketReply {
  string message = 1;
}
